# INS

./: .gitignore  ReadMe.txt
2d_case/: data2d_select.mat  error_ellipse.m  generate_data.m  get_Q.m  get_initial_value.m  get_state_transition_F.m  run_kf_INS.m  run_kf_INS_yangyang.m  select_data.m  unit_test_state_transition.m
2d_case/02_Turtlebot/: plot_turtlebotdata.m  run_kf_INS.m  run_turtlebot.m
2d_case/03_gnss_imu_sim/: exe_kf.m  generate_data.m  load_csv.m  load_csv.m~  run_gnss_imu_sim.m
3d_case/: INS_equation.m  generate_data_fromGNSSaidedINSfile.m  generate_data_from_turtlebot.m  getF.m  get_initial_value.m  plot_turtlebotdata.m  run_EKF.m  setup.m
WASP_1_1-master/: Nav_eq.m  error_growth.m  get_settings.m  main_jun.m  plot_data.m
data/: GNSSaidedINS_data2d.mat  edge.txt  left.mat  left_trans.mat  node_init.txt  node_opti.txt  turtlebot1.mat  turtlebot_data2d.mat
matlab_generate_data/: generate_data.m  generate_data.m~
non_linear_optimization/: load_nodes.m  navigation_class.m  run_gps_imu.m  temp.m  writing_edges.m  writing_node.m
non_linear_optimization/cpp_optimization/: CMakeLists.txt  parameters.txt
non_linear_optimization/cpp_optimization/include/: paramReader.h  struct.h
non_linear_optimization/cpp_optimization/sample/: factor_odom.cpp  factor_odom.h  factor_pts_obsv.cpp  factor_pts_obsv.h  optimizer_ceres.cpp  optimizer_ceres.h
non_linear_optimization/cpp_optimization/src/: factors.cpp  factors.h  main.cpp  math_utility.cpp  math_utility.h  optimizer.cpp  optimizer.h  paramReader.cpp
otherscode/: GPSaidedINS.m  setup.m
(+29 files in other folders)
